# roobot

./: .gitattributes  .gitignore  DEPLOY_JACKAL.md  HANDOFF.md  NOTES_FIXES.md  README.md  headless_test.py  install.sh  link_ws.sh  make_fast_world.py  make_world_from_map.py  map_room.sh  run.sh  run_real.sh  save_map.sh  send_goal.sh  set_ros_env.sh
amr_bringup/: CMakeLists.txt  package.xml
amr_bringup/launch/: amr_full.launch  amr_jackal_real.launch  amr_jackal_real_2d.launch  amr_mapping.launch  amr_system.launch
amr_bringup/maps/: dingoMap.pgm  dingoMap.yaml  dingoMap1.pgm  dingoMap1.yaml  test_map.pgm  test_map.yaml
amr_bringup/rviz/: amr.rviz
amr_bringup/src/: scenario_node.py
amr_bringup/worlds/: dingoMap.world  dingoMap1.world
amr_control/: CMakeLists.txt  package.xml
amr_control/src/: pp_controller_node.py  pp_logic.py  pure_pursuit.py
amr_perception/: CMakeLists.txt  package.xml
amr_perception/src/: calibrate_livox.py  diag_ground.py  harmonic_logic.py  local_grid.py  vfh_logic.py  vfh_node.py  vfh_plus_node.py
amr_planning/: CMakeLists.txt  package.xml
amr_planning/src/: planner_logic.py  planner_node.py  prm_logic.py  prm_node.py
