<?xml version="1.0"?>
<package format="2">
  <name>amr_bringup</name>
  <version>1.0.0</version>
  <description>AMR bringup launch files — ROS1 Melodic</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>amr_perception</exec_depend>
  <exec_depend>amr_planning</exec_depend>
  <exec_depend>amr_control</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
