<?xml version="1.0"?>
<package format="2">
  <name>amr_control</name>
  <version>1.0.0</version>
  <description>AMR Pure Pursuit + VFH controller — ROS1 Melodic</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python-numpy</exec_depend>
</package>
