<?xml version="1.0"?>
<package format="2">
  <name>amr_perception</name>
  <version>1.0.0</version>
  <description>AMR VFH local planner — ROS1 Melodic</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python-numpy</exec_depend>
</package>
